@@ -535,9 +535,6 @@ public class InventoryViewModel extends BaseViewModel {
           return;
       }
     Bundle bundle = new Bundle();
-    if (stores.get(0).getId() != -1) {
-      stores.add(0, new Store(-1, getString(R.string.subtitle_none_selected)));
-    }
     bundle.putParcelableArrayList(Constants.ARGUMENT.STORES, stores);
     bundle.putInt(
         Constants.ARGUMENT.SELECTED_ID,
@@ -545,6 +542,7 @@ public class InventoryViewModel extends BaseViewModel {
             ? formData.getStoreLive().getValue().getId()
             : -1
     );
+    bundle.putBoolean(ARGUMENT.DISPLAY_EMPTY_OPTION, true);
     showBottomSheet(new StoresBottomSheet(), bundle);
   }
 
